[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ejecutable/Juego/Enemigo/Enemigo 2/Enemigo2.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.3_Cannon/P.3_Cannon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ejecutable/Juego/Enemigo/Enemigo 2/Modelo/Ene2_modelo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ejecutable/Juego/Enemigo/Sonidos/MuerteEnemigo.wav" type="AudioStream" id=4]
[ext_resource path="res://Ejecutable/Juego/Enemigo/Enemigo 2/Sonido/DannoMalo.wav" type="AudioStream" id=5]
[ext_resource path="res://Ejecutable/Juego/HUD/HUD Vida/HUD Vida 3D/barraVida 3D.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.136, 0.673241, 0.298449 )

[node name="Enemigo2" type="Spatial"]
script = ExtResource( 1 )

[node name="P3_Cannon" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Ene2_modelo" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Area" type="Area" parent="Ene2_modelo"]
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Ene2_modelo/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.244814, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TiempoMuerte" type="Timer" parent="."]

[node name="AudioMuerteMalo" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 12.0

[node name="AudioDannoMalo" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )

[node name="barraVida 3D" parent="." instance=ExtResource( 6 )]
transform = Transform( -0.999902, 0, 0.0140247, 0, 1, 0, -0.0140247, 0, -0.999902, 0.252943, 0.9622, 0 )
[connection signal="body_entered" from="Ene2_modelo/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TiempoMuerte" to="." method="_on_TiempoMuerte_timeout"]
